# khc-cli

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: airflow.cfg
csv/: projects.csv
dags/: awesome_cure_dag.py
src/khc_cli/: README.md  Typer-Based ETL process and integrated with Airflow.md  __init__.py  app.py  main.py  pyproject.toml  version.py
