[project]
name = "khc-cli"
version = "0.1.0"
description = "CLI tool for curating and analyzing Awesome lists, focusing on Open Sustainable Technology."
readme = "README.md"
requires-python = ">=3.8, <3.12"
license = {text = "MIT"}
keywords = ["khc", "awesome-list", "cli", "typer", "python", "sustainability", "technology", "open", "source", "software", "uv"]
authors = [
    {name = "Abderrahim Guennoune", email = "aguennoune@outlook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

dependencies = [
    "numpy>=1.24",
    "plotly>=5.18.0",
    "pandas>=1.3.0,<2.0.0",
    "dateparser>=1.1.8",
    "pycountry>=22.3.5",
    "pygithub>=2.1.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0", # Remplacé bs4 par beautifulsoup4
    "termcolor>=2.3.0",
    "markdown>=3.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "handcalcs>=1.6.5",
    "typer",
    "kaleido==0.2.1",
    "pycaret>=3.0.0",
    "importlib-metadata>=6.8.0; python_version < '3.10'", # Conditionnel pour les anciennes versions de Python
    "rich>=13.6.0",
    "typer-common-functions>=0.0.7",
    "simple-parsing>=0.1.4",
]

[project.scripts]
khc-cli = "khc_cli.main:app"

[project.optional-dependencies]
dev = [
    "pre-commit>=2.6",
    "pytest>=7.1.2",
    "mypy>=1.1.1",
    "hatch>=1.7.0", 
]

[project.urls]
Homepage = "https://krypto-hashers-community.netlify.app/"
Repository = "https://github.com/Krypto-Hashers-Community/khc-cli" 
"Bug Tracker" = "https://github.com/Krypto-Hashers-Community/khc-cli/issues"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
fix = true
line-length = 100
extend-select = ["W605", "N"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["khc_cli"]
required-imports = ["from __future__ import annotations"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["khc_cli"]


# Optionnel : Configuration pour sdist si vous voulez être explicite
[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "pyproject.toml",
    "README.md",
    # Ajoutez d'autres fichiers/dossiers nécessaires pour le sdist
]

[tool.uv.sources]
khc-cli = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "khc-cli",
]
